[metadata]
name = Dino-Bot
version = attr: dino.__version__
description = A highly customisable Discord bot
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Cog-Creators
author_email = cogcreators@gmail.com
url = https://github.com/Cog-Creators/Red-DiscordBot
project_urls =
    Discord Server = https://discord.gg/red
    Documentation = https://docs.discord.red
    Donate on Patreon = https://www.patreon.com/Red_Devs
    Issue Tracker = https://github.com/Cog-Creators/Red-DiscordBot/issues
    Source Code = https://github.com/Cog-Creators/Red-DiscordBot
classifiers =

    Development Status :: 5 - Development/Unstable
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat
license_files =
    LICENSE
    redbot/**/*.LICENSE